--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CampusConnect">
         <activity
+            android:name=".MainActivityFaculty"
+            android:exported="false" />
+        <activity
             android:name=".AddPost"
             android:exported="false" />
         <activity
@@ -25,9 +28,9 @@
         <activity
             android:name=".LoginActivity"
             android:exported="false"
-            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"/>
+            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar" />
         <activity
-            android:name=".MainActivity"
+            android:name=".MainActivityStudent"
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
