--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,12 +35,12 @@
             android:exported="false" />
         <activity
             android:name=".SignUpActivity"
-            android:exported="false"
-            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar" />
+            android:exported="false"/>
         <activity
             android:name=".LoginActivity"
             android:exported="false"
-            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar" />
+            />
+<!--        android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"-->
         <activity
             android:name=".MainActivityStudent"
             android:exported="false" />
