--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CampusConnect">
         <activity
-            android:name=".AddPostFacultyActivity"
+            android:name=".GroupFeedActivity"
             android:exported="false" />
-<!--        <activity-->
-<!--            android:name=".FacultyFragment"-->
-<!--            android:exported="false" />-->
+        <activity
+            android:name=".AddPostFacultyActivity"
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".FacultyFragment" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".AddPostDepartmentActivity"
             android:exported="false" />
@@ -25,7 +27,7 @@
             android:name=".ForgotPasswordActivity"
             android:exported="false" />
         <activity
-            android:name=".DepartmentMainFeedActivity"
+            android:name=".DepartmentFeedActivity"
             android:exported="false" />
         <activity
             android:name=".AddPostHostelActivity"
