- Faculty Profile Page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sehab.campusconnect">
+    package="com.sehab.campusconnect" >
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +12,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CampusConnect">
+        android:theme="@style/Theme.CampusConnect" >
+        <activity
+            android:name=".ProfileActivityFaculty"
+            android:exported="false" />
         <activity
             android:name=".AddPostGroupActivity"
             android:exported="false" />
@@ -47,7 +49,7 @@
             android:name=".AddPostCampusActivity"
             android:exported="false" />
         <activity
-            android:name=".ProfileActivity"
+            android:name=".ProfileActivityStudent"
             android:exported="false" />
         <activity
             android:name=".AboutUsActivity"
@@ -63,7 +65,7 @@
             android:exported="false" />
         <activity
             android:name=".SplashActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -74,4 +76,5 @@
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
     </application>
+
 </manifest>
